--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: CI
-on: [workflow_dispatch]
-# on: 
-#   push:
-#     branches: [ main ]
+on: 
+  [workflow_dispatch]:
+  push:
+    branches: [ main ]
 
 jobs:
   build:
