--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,10 @@
 name: CI
-on: 
-  [workflow_dispatch]:
+on:
   push:
-    branches: [ master ]
+    branches:
+      - main
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+*
 
 jobs:
   build:
